# dmidecoder_boost

./: CMakeLists.txt
src/: main.cpp
src/dmi/: decoder.cpp  decoder.h  entry.h  structure.h
